--- a/recipe-manager/docker-compose.yml
+++ b/recipe-manager/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - ./app/static:/code/app/static
       - ./uploads:/code/uploads
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       - DATABASE_URL=mysql+pymysql://user:password@db/recipe_db
 
@@ -26,6 +27,11 @@ services:
       - mysql-data:/var/lib/mysql
     ports:
       - "3306:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-u", "user", "-ppassword"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   mysql-data:
