--- a/recipe-manager/Dockerfile
+++ b/recipe-manager/Dockerfile
@@ -8,6 +8,7 @@ WORKDIR /code
 COPY requirements.txt .
 
 # Install any needed dependencies specified in requirements.txt
+RUN apt-get update && apt-get install -y default-mysql-client tar && rm -rf /var/lib/apt/lists/*
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the app directory as a package
