--- a/recipe-manager/Dockerfile
+++ b/recipe-manager/Dockerfile
@@ -8,7 +8,8 @@ WORKDIR /code
 COPY requirements.txt .
 
 # Install any needed dependencies specified in requirements.txt
-RUN apt-get update && apt-get install -y default-mysql-client tar && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y default-mysql-client tar curl && rm -rf /var/lib/apt/lists/*
+RUN curl https://rclone.org/install.sh | bash
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the app directory as a package
