--- a/recipe-manager/docker-compose.yml
+++ b/recipe-manager/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     environment:
       - PYTHONPATH=/code
       - DATABASE_URL=mysql+pymysql://user:password@db/recipe_db
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
 
   db:
     image: mysql:8.0
